k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tsflow
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy
      namespace: envoy
  hostnames:
    - "tsflow.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tsflow
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
